--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "web3p/web3.php",
+    "name": "tim-tom1/web3.php",
     "description": "Ethereum web3 interface.",
     "type": "library",
     "license": "MIT",
